<?xml version="1.0"?>
<package>
  <name>mobility_base_examples</name>
  <version>0.0.1</version>
  <description>
    Example programs to demo the Mobility Base SDK
  </description>

  <license>BSD</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/mobility_base_examples</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/mobility_base_examples/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
